test: 테스트 케이스 추가, 중복 제거, 테스트 이름 재정의